Changed vision error analysis error creation to only be present when analysis has error with non blank message present